# ERC-7521

./: .gitignore  .prettierrc  Cargo.toml  README.md  coverage.sh  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt
src/: main.rs  (+2 more)
test/ethers-rs/utils/: Cargo.toml
test/ethers-rs/utils/src/: abigen.rs  balance.rs  deploy.rs  lib.rs  setup.rs
test/ethers-rs/utils/src/builders/: asset_curve_builder.rs  curve_type.rs  erc20_curve_builder.rs  eth_curve_builder.rs  evaluation_type.rs  intent_builder.rs  intent_segment.rs  mod.rs
test/ethers-rs/utils/src/builders/asset_based_intent_standard/: intent_builder.rs  mod.rs  segment_builder.rs
test/ethers-rs/utils/src/builders/asset_release_intent_standard/: segment_builder.rs
test/ethers-rs/utils/src/builders/asset_require_intent_standard/: segment_builder.rs
test/ethers-rs/utils/src/builders/default/: intent_builder.rs  mod.rs  segment_builder.rs
test/ethers-rs/utils/src/builders/default_intent_standard/: mod.rs  segment_builder.rs
test/ethers-rs/utils/src/builders/eth_release_intent_standard/: segment_builder.rs
test/ethers-rs/utils/src/builders/eth_require_intent_standard/: segment_builder.rs
test/ethers-rs/utils/src/wrappers/: abstract_account.rs  asset_based_intent_standard.rs  asset_release_intent_standard.rs  asset_require_intent_standard.rs  call_intent_standard.rs  entry_point.rs  erc20_release_intent_standard.rs  eth_release_intent_standard.rs  eth_require_intent_standard.rs  libs.rs  mod.rs  solver_utils.rs  test_erc1155.rs  test_erc20.rs  test_erc721.rs  test_uniswap.rs
(+432 files in other folders)
