[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-solc = { version = "2.0.10" }
ethers = { version = "2.0.10", default-features = true, features = [
  "abigen",
  "rustls",
] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
serde_json = "1.0.99"
serde = "1.0.188"

[lib]
doctest = false
